--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookie-parser": "^1.3.4",
     "express": "^4.12.0",
     "express-session": "^1.10.3",
+    "googleapis": "^12.0.0",
     "gulp": "^3.8.11",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.5.2",
@@ -65,6 +66,7 @@
     "sinon": "^1.13.0",
     "socket.io": "^1.3.4",
     "socket.io-client": "^1.3.5",
-    "supertest": "^0.15.0"
+    "supertest": "^0.15.0",
+    "twitter": "^1.4.0"
   }
 }
